feat: implemented administration api
