# backend/docs/swagger.json
@@ -1346,9 +1346,9 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Requires permission admin.texture.edit",
+                "description": "Upload file via resource field. Requires permission admin.texture.edit",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -1470,7 +1470,7 @@
                 ],
                 "description": "Update texture by ID. Requires permission admin.texture.edit",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -1652,7 +1652,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Invite/Create new user. Requires permission admin.user.edit",
+                "description": "Invite/Create new user. Requires permission admin.user.invite",
                 "consumes": [
                     "application/json"
                 ],
@@ -2087,6 +2087,29 @@
                 }
             }
         },
+        "admin.AdminMapChat": {
+            "type": "object",
+            "required": [
+                "enable",
+                "enableDisconnectedList",
+                "enableOnlineList",
+                "enableUpload"
+            ],
+            "properties": {
+                "enable": {
+                    "type": "boolean"
+                },
+                "enableDisconnectedList": {
+                    "type": "boolean"
+                },
+                "enableOnlineList": {
+                    "type": "boolean"
+                },
+                "enableUpload": {
+                    "type": "boolean"
+                }
+            }
+        },
         "admin.AdminMapResponse": {
             "type": "object",
             "properties": {
@@ -2094,21 +2117,7 @@
                     "type": "boolean"
                 },
                 "chat": {
-                    "type": "object",
-                    "properties": {
-                        "enable": {
-                            "type": "boolean"
-                        },
-                        "enableDisconnectedList": {
-                            "type": "boolean"
-                        },
-                        "enableOnlineList": {
-                            "type": "boolean"
-                        },
-                        "enableUpload": {
-                            "type": "boolean"
-                        }
-                    }
+                    "$ref": "#/definitions/admin.AdminMapChat"
                 },
                 "contactPage": {
                     "type": "string",
@@ -2274,6 +2283,10 @@
         },
         "admin.CreateAnnouncement": {
             "type": "object",
+            "required": [
+                "message",
+                "type"
+            ],
             "properties": {
                 "message": {
                     "type": "string",
@@ -2294,6 +2307,10 @@
         },
         "admin.CreateBan": {
             "type": "object",
+            "required": [
+                "check",
+                "message"
+            ],
             "properties": {
                 "check": {
                     "type": "string",
@@ -2311,26 +2328,21 @@
         },
         "admin.CreateMap": {
             "type": "object",
+            "required": [
+                "canReport",
+                "contactPage",
+                "expireOn",
+                "mapUrl",
+                "policy",
+                "roomName",
+                "tags"
+            ],
             "properties": {
                 "canReport": {
                     "type": "boolean"
                 },
                 "chat": {
-                    "type": "object",
-                    "properties": {
-                        "enable": {
-                            "type": "boolean"
-                        },
-                        "enableDisconnectedList": {
-                            "type": "boolean"
-                        },
-                        "enableOnlineList": {
-                            "type": "boolean"
-                        },
-                        "enableUpload": {
-                            "type": "boolean"
-                        }
-                    }
+                    "$ref": "#/definitions/admin.AdminMapChat"
                 },
                 "contactPage": {
                     "type": "string",
@@ -2354,6 +2366,8 @@
                 },
                 "roomName": {
                     "type": "string",
+                    "maxLength": 32,
+                    "minLength": 3,
                     "example": "Default Room"
                 },
                 "tags": {
@@ -2370,6 +2384,11 @@
         },
         "admin.CreateTexture": {
             "type": "object",
+            "required": [
+                "layer",
+                "tags",
+                "texture"
+            ],
             "properties": {
                 "layer": {
                     "type": "string",
@@ -2396,15 +2415,16 @@
                 "texture": {
                     "type": "string",
                     "example": "eyes1"
-                },
-                "url": {
-                    "type": "string",
-                    "example": "%FRONTEND_URL%/public/resources/customisation/character_eyes/character_eyes1.png"
                 }
             }
         },
         "admin.CreateUser": {
             "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string",
@@ -2412,16 +2432,23 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 8,
                     "example": "my$ecur3P4$$word"
                 },
                 "username": {
                     "type": "string",
+                    "maxLength": 16,
+                    "minLength": 3,
                     "example": "Bob"
                 }
             }
         },
         "admin.UpdateAnnouncement": {
             "type": "object",
+            "required": [
+                "message",
+                "type"
+            ],
             "properties": {
                 "message": {
                     "type": "string",
@@ -2442,26 +2469,21 @@
         },
         "admin.UpdateMap": {
             "type": "object",
+            "required": [
+                "canReport",
+                "contactPage",
+                "expireOn",
+                "mapUrl",
+                "policy",
+                "roomName",
+                "tags"
+            ],
             "properties": {
                 "canReport": {
                     "type": "boolean"
                 },
                 "chat": {
-                    "type": "object",
-                    "properties": {
-                        "enable": {
-                            "type": "boolean"
-                        },
-                        "enableDisconnectedList": {
-                            "type": "boolean"
-                        },
-                        "enableOnlineList": {
-                            "type": "boolean"
-                        },
-                        "enableUpload": {
-                            "type": "boolean"
-                        }
-                    }
+                    "$ref": "#/definitions/admin.AdminMapChat"
                 },
                 "contactPage": {
                     "type": "string",
@@ -2485,6 +2507,8 @@
                 },
                 "roomName": {
                     "type": "string",
+                    "maxLength": 32,
+                    "minLength": 3,
                     "example": "Default Room"
                 },
                 "tags": {
@@ -2504,6 +2528,11 @@
         },
         "admin.UpdateTexture": {
             "type": "object",
+            "required": [
+                "layer",
+                "tags",
+                "texture"
+            ],
             "properties": {
                 "layer": {
                     "type": "string",
@@ -2530,19 +2559,25 @@
                 "texture": {
                     "type": "string",
                     "example": "eyes1"
-                },
-                "url": {
-                    "type": "string",
-                    "example": "%FRONTEND_URL%/public/resources/customisation/character_eyes/character_eyes1.png"
                 }
             }
         },
         "admin.UpdateUser": {
             "type": "object",
+            "required": [
+                "email",
+                "permissions",
+                "tags",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string",
                     "example": "bob@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
                 },
                 "permissions": {
                     "type": "array",
@@ -2551,7 +2586,7 @@
                     },
                     "example": [
                         "admin.editor",
-                        "admin.user.*"
+                        "admin.user.edit"
                     ]
                 },
                 "tags": {
@@ -2568,6 +2603,8 @@
                 },
                 "username": {
                     "type": "string",
+                    "maxLength": 16,
+                    "minLength": 3,
                     "example": "Bob"
                 },
                 "vCardURL": {
@@ -2602,7 +2639,8 @@
                     "type": "boolean"
                 },
                 "extra": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "user don't have permissions"
                 },
                 "message": {
                     "type": "string",
@@ -2614,11 +2652,32 @@
                 },
                 "success": {
                     "type": "boolean"
+                },
+                "validation": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.ErrorResponse"
+                    }
+                }
+            }
+        },
+        "handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "field": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
                 }
             }
         },
         "handler.LoginRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string",
@@ -2640,9 +2699,16 @@
         },
         "handler.RegisterRequest": {
             "type": "object",
+            "required": [
+                "confirmPassword",
+                "email",
+                "password",
+                "username"
+            ],
             "properties": {
                 "confirmPassword": {
                     "type": "string",
+                    "minLength": 8,
                     "example": "my$ecur3P4$$word"
                 },
                 "email": {
@@ -2655,10 +2721,13 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 8,
                     "example": "my$ecur3P4$$word"
                 },
                 "username": {
                     "type": "string",
+                    "maxLength": 16,
+                    "minLength": 3,
                     "example": "Bob"
                 }
             }
